# boosh

./: LICENSE  README.md
dsp/: Cargo.toml
dsp/src/: lib.rs
webapp/: .prettierrc  audio.d.ts  next.config.js  package.json
webapp/components/: DspWorkbench.tsx  FourierGraph.tsx  ProcessChangeSelector.tsx
webapp/pages/: index.js  index.tsx
webapp/public/: audio-processor.js
webapp/types/: interfaces.ts
webapp/utils/: debounce.js  debounce.ts
